--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
 
 body,td,th,p{
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
+	font-size: 16px;
 	color: #333;
 	line-height: 1.5;
 }
@@ -18,7 +18,7 @@ ul, li {
 	color: #333;
 }
 a {
-	color: orange;
+	color: #FD2C74;
 	text-decoration: none;
 }
 a:hover, a:focus {
@@ -35,8 +35,12 @@ h1, h2, h3, h4, h5, h6 {
 article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+
+img, embed {
+  max-width: 100%;
+}
 #maincontent {
-  background-color: #f3f3f3;
+  background-color: #ffffff;
   min-height: 100%;
 }
 #footer {
@@ -54,6 +58,7 @@ nav {
   height: 80px;
   background-color: #252831;
   text-align:center;
+  display: grid;
 }
 nav h1 {
   margin: auto;
@@ -66,9 +71,9 @@ nav h1 a {
   text-transform: uppercase;
 }
 #breadcrumb {
-    padding: 10px 40px 16px;
+    padding: 10px 20px 16px;
     list-style: none;
-    background-color: #eee;
+    background-color: #fffefeba;
     font-size: 17px;
     margin: 0;
     width: calc(50% - 80px);
@@ -88,15 +93,17 @@ nav h1 a {
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
-    color: #0275d8;
+    color: #FD2C74;
     text-decoration: none;
 }
 
 /* Add a color on mouse-over */
 #breadcrumb li a:hover {
-    color: #01447e;
+    color: rgb(245, 14, 95);
     text-decoration: underline;
 }
+
+
 /* ====================== Map ====================== */
 #map {
   height: 400px;
@@ -105,10 +112,10 @@ nav h1 a {
 }
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
-  width: 100%;
-  height: 50px;
-  background-color: #3397DB;
+  width: calc(100% - 30px);
+  background-color: #444;
   align-items: center;
+  padding: 15px;
 }
 .filter-options h2 {
   color: white;
@@ -124,7 +131,7 @@ nav h1 a {
   font-size: 11pt;
   height: 35px;
   letter-spacing: 0;
-  margin: 10px;
+  margin: 10px 10px 0 10px;
   padding: 0 10px;
   width: 200px;
 }
@@ -133,19 +140,25 @@ nav h1 a {
 #restaurants-list {
   background-color: #f3f3f3;
   list-style: outside none none;
-  margin: 0;
-  padding: 30px 15px 60px;
+  margin: 25px 15px;
+  padding: 0;
   text-align: center;
+  display: grid;
+  grid-gap: 15px;
+  grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
+  justify-self: center;
+}
+
+#restaurants-list .restaurant-details {
+  margin: 20px;
 }
 #restaurants-list li {
   background-color: #fff;
-  border: 2px solid #ccc;
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, .23);
   font-family: Arial,sans-serif;
-  margin: 15px;
   min-height: 380px;
-  padding: 0 30px 25px;
   text-align: left;
-  width: 270px;
+  min-width: 270px;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
@@ -154,12 +167,13 @@ nav h1 a {
   max-width: 100%;
   min-height: 248px;
   min-width: 100%;
+  object-fit: cover;
 }
 #restaurants-list li h1 {
-  color: #f18200;
+  color: #FD2C74;
   font-family: Arial,sans-serif;
-  font-size: 14pt;
-  font-weight: 200;
+  font-size: 18px;
+  font-weight: 400;
   letter-spacing: 0;
   line-height: 1.3;
   margin: 20px 0 10px;
@@ -167,14 +181,14 @@ nav h1 a {
 }
 #restaurants-list p {
   margin: 0;
-  font-size: 11pt;
+  font-size: 16px;
 }
 #restaurants-list li a {
-  background-color: orange;
+  background-color: #FD2C74;
   border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
-  font-size: 10pt;
+  font-size: 16px;
   margin: 15px 0 0;
   padding: 8px 30px 10px;
   text-align: center;
@@ -204,21 +218,45 @@ nav h1 a {
 }
 .inside #footer {
   bottom: 0;
-  position: absolute;
-  width: 50%;
+  position: relative;
+  width: calc(50% - 50px);
+
 }
 #restaurant-name {
-  color: #f18200;
+  color: #FD2C74;
   font-family: Arial,sans-serif;
   font-size: 20pt;
   font-weight: 200;
   letter-spacing: 0;
-  margin: 15px 0 30px;
+  margin: 15px 0 15px;
   text-transform: uppercase;
   line-height: 1.1;
+  width: 100%;
+  text-align: center;
 }
+
+/* Style and hide View Map button */
+.button-container {
+  display: grid;
+  justify-content: center;
+  width: 100%
+}
+.viewmap-button {
+  display: none;
+  border: none;
+  background: #FD2C74;
+  color: #fff;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+.viewmap-button:hover {
+  background: rgb(121, 21, 56);
+  color: #fff;
+}
+
 #restaurant-img {
-	width: 90%;
+	width: 100%;
 }
 #restaurant-address {
   font-size: 12pt;
@@ -234,23 +272,32 @@ nav h1 a {
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
-	width: 90%;
+	width: 100%;
 }
-#restaurant-container, #reviews-container {
-  border-bottom: 1px solid #d9d9d9;
-  border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
-  width: 50%;
+#restaurant-container {
+  /* border-bottom: 1px solid #d9d9d9; */
+  /* border-top: 1px solid #fff; */
+  margin: 140px 20px 30px;
+  width: calc(50% - 40px);
 }
+
 #reviews-container {
-  padding: 30px 40px 80px;
+  /* border-bottom: 1px solid #d9d9d9; */
+  /* border-top: 1px solid #fff; */
+  margin: 50px 20px 30px;
+  width: calc(50% - 40px);
 }
+
+/* #reviews-container {
+  padding: 30px 40px 80px;
+} */
 #reviews-container h2 {
-  color: #f58500;
+  color: #FD2C74;
   font-size: 24pt;
   font-weight: 300;
   letter-spacing: -1px;
   padding-bottom: 1pt;
+  text-align: center;
 }
 #reviews-list {
   margin: 0;
@@ -258,18 +305,73 @@ nav h1 a {
 }
 #reviews-list li {
   background-color: #fff;
-    border: 2px solid #f3f3f3;
+  border: 2px solid #f3f3f3;
   display: block;
   list-style-type: none;
   margin: 0 0 30px;
-  overflow: hidden;
-  padding: 0 20px 20px;
-  position: relative;
-  width: 85%;
+  padding: 20px 20px 20px;
+
 }
 #reviews-list li p {
   margin: 0 0 10px;
 }
+
+#reviews-list li p:first-child {
+  font-size: 1.5em;
+}
+
+#reviews-list li p:nth-child(2), #reviews-list li p:nth-child(3) {
+  color: #00000091;
+}
+
 #restaurant-hours td {
   color: #666;
+}
+
+/*Map style edit*/
+.leaflet-container a{
+  color: #FD2C74 !important;
+}
+
+/* Responsive style for smaller screens*/
+@media screen and (max-width: 750px) {
+  #breadcrumb,
+  #restaurant-container,
+  #reviews-container {
+    width: calc(100% - 40px);
+  }
+
+  .inside #footer {
+    width: calc(100% - 50px);
+  }
+
+  /* Responsive map styling*/
+  .viewmap-button {
+    display: block;
+  }
+
+  .inside #map-container {
+    z-index: 10000;
+    transform: translateX(800px);
+    width: 100%;
+    transition: transform 0.5s ease-in;
+  }
+
+  .close {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    background: #fff;
+    font-size: 1.5em;
+    font-weight: 400;
+    z-index: 1000;
+  }
+
+  .open {
+    transform: translateX(0px) !important;
+  }
+
+
+
+
 }
