--- a/css/styles.css
+++ b/css/styles.css
@@ -226,6 +226,40 @@ nav h1 a {
   width: calc(50% - 50px);
 
 }
+.restaurant-favorite-button {
+  display: inline-block;
+  border: none;
+  margin: 0;
+  text-decoration: none;
+  background: #ffff;
+  font-size: 1rem;
+  cursor: pointer;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  width: 5%;
+}
+.restaurant-name-favorite {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.restaurant-name-favorite i {
+  font-size: 25px;
+  color: #9a909487;
+  transition: all ease-in 0.05s;
+}
+
+.restaurant-name-favorite button i:hover {
+  font-size: 27px;
+  color: #FD2C74
+}
+
+.restaurant-favorite-clicked {
+  font-size: 27px !important;
+  color: #FD2C74 !important;
+}
+
 #restaurant-name {
   color: #FD2C74;
   font-family: Arial,sans-serif;
@@ -235,7 +269,7 @@ nav h1 a {
   margin: 15px 0 15px;
   text-transform: uppercase;
   line-height: 1.1;
-  width: 100%;
+  width: 95%;
   text-align: center;
 }
 
@@ -328,7 +362,7 @@ nav h1 a {
   color: #00000091;
 }
 
-#reviews-form textarea, input[type="text"], input[type="range"] {
+#reviews-form textarea, input[type="text"]{
   font-size: 16px;
   line-height: 1.5;
   padding: 10px;
@@ -337,6 +371,15 @@ nav h1 a {
   margin: 0 0 30px;
   background-color: #f8f8f8;
 }
+
+#reviews-form textarea, input[type="range"]{
+  font-size: 16px;
+  line-height: 1.5;
+  padding: 10px;
+  border: 1px solid #eaeaea;
+  background-color: #f8f8f8;
+}
+
 #reviews-form input[type="submit"]{
   background-color: #FD2C74;
   color: #fff;
@@ -346,7 +389,14 @@ nav h1 a {
   font-size: 18px;
   cursor: pointer;
 }
-
+#rating-slider{
+  display: flex;
+  font-size: 16px;
+  line-height: 1.5;
+  padding: 10px;
+  width: 50%;
+  align-items: center;
+}
 
 #restaurant-hours td {
   color: #666;
